# futbot

./: .gitignore  Makefile  README.md  cam.py  config.env  conftest.py  debug_vision.py  main.py  model.onnx.placeholder  motor.py  pyproject.toml
App/futbot-test-rs-kernel-v2/: Cargo.toml  Cross.toml  Dockerfile.cross  Dockerfile.cross.aarch64  erro.txt
App/futbot-test-rs-kernel-v2/docs/: perf-rpi3.md
App/futbot-test-rs-kernel-v2/docs/plans/: 2026-03-18-raspberry-servo-tilt-design.md
App/futbot-test-rs-kernel-v2/scripts/: deploy_rpi3.sh  run_rpi3_ai_profile.sh
App/futbot-test-rs-kernel-v2/src/: ai_policy.rs  camera.rs  config.rs  game_logic.rs  main.rs  motor_control.rs  pipeline_state.rs  tracker.rs
App/futbot-test-rs-kernel-v2/src/raspberry/: mod.rs  servo_tilt.rs
App/futbot-test-rs-kernel-v2/src/vision/: context.rs  mod.rs
App/futbot-test-rs-kernel-v2/tests/: ai_inference_scenarios.rs  game_logic_scenarios.rs  motor_control_scenarios.rs  pipeline_state_scenarios.rs  validate_utils.rs  vision_bgr_fused_scenarios.rs  vision_kernel_dispatch_scenarios.rs  vision_kernel_equivalence.rs
App/futbot_vision_model/: README.md  main.py  pyproject.toml
App/futbot_vision_model/configs/: futbot.yaml
App/futbot_vision_model/dataset/labels/: train.cache  val.cache
App/futbot_vision_model/onnx_optimizer/: __init__.py  config.py  hardware_detector.py  optimizer.py  quantizer.py
App/futbot_vision_model/src/ai/: __init__.py  augment_dataset.py  capture_samples.py  export.py  inference.py  train.py
App/futbot_vision_model/tensorrt_optimizer/: __init__.py  config.py  engine_builder.py  hardware_detector.py  optimizer.py
futbot-test/: ai_inference.py  camera.py  config.py  detector.py  game_logic.py  main.py  motor_control.py  pyproject.toml  tracker.py
futbot-test/docs/superpowers/plans/: 2026-03-15-clahe-preprocessing.md
futbot-test/docs/superpowers/specs/: 2026-03-15-clahe-preprocessing-design.md
futbot-test/tests/: test_camera_mock.py  test_detector.py  test_game_logic.py  test_pid.py
futbot-test/tools/: export_model.py
futbot-v3/: README.md  cam.py  capture_frame.py  main.py  pyproject.toml
futbot-v3/.claude/: settings.local.json
futbot-v3/docs/plans/: 2026-04-15-husky-to-cam-hybrid-design.md  2026-04-15-husky-to-cam-hybrid-implementation-plan.md
futbot-v3/scripts/: test_chase_dynamic.py  test_motors_raw.py
futbot-v3/src/chase/: visual_servo_controller.py
futbot-v3/src/motors/dto/: wheel_dto.py
futbot-v3/src/motors/operators/: burst_operator.py  differential_operator.py
futbot-v3/src/motors/utils/: __init__.py
futbot-v3/src/pipeline/: __init__.py
futbot-v3/src/pipeline/dto/: __init__.py
futbot-v3/src/pipeline/operators/: __init__.py  chase_operator.py  search_operator.py
futbot-v3/src/pipeline/utils/: pipeline_constants.py
futbot-v3/src/ultrasonic/: __init__.py  ultrasonic_service.py
futbot-v3/src/ultrasonic/dto/: __init__.py  ultrasonic_dto.py
futbot-v3/src/vision/dto/: line_dto.py  (+1 more)
futbot-v3/test-robot/: deploy  diag_all_detections.py  diag_center_kick.py  diag_line.py  diag_servo_map.py  diag_yolo_hsv.py  hardware.py  main.py  pan=%d  test_gol.py  test_line.py  test_motors.py  test_omni.py
futbot-v3/test-robot/.backup/: hardware.py  main.py  pyproject.toml  test_motors.py  test_omni.py  test_sonic.py
futbot-v3/test-robot/docs/: serial-map.tex
futbot-v3/test-robot/tests/: test_adaptive_ball_detection.py  test_diag_servos.py  test_main_approach_logic.py
futbot-v3/tests/: test_main_hybrid_logic.py
(+2276 files in other folders)
