[project]
name = "futbot-v2"
version = "0.2.0"
description = "FutbotMX v2 — Robot autónomo de fútbol con comunicación P2P WebSocket"
requires-python = ">=3.11,<3.15"

dependencies = [
    # Visión
    "opencv-python-headless>=4.13.0.92,<5",
    "numpy>=2,<3",
    "onnxruntime>=1.24.4,<2",

    # Hardware
    "pyserial>=3.5",
    "smbus2>=0.4",

    # Comunicación P2P entre robots (módulo webhook)
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
