[project]
name = "futbot-test"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]
export = [
    "ultralytics>=8.3",
    "onnx>=1.15",
    "onnxsim>=0.4",
]

[tool.setuptools]
py-modules = ["config", "camera", "detector", "tracker", "game_logic", "motor_control", "ai_inference", "main"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
