[project]
name = "futbot-vision"
version = "0.1.0"
description = "YOLO26 vision model for FutBotMX robot soccer"
requires-python = ">=3.14"
dependencies = [
    "ultralytics>=8.4.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "onnx>=1.16.0",
]

[project.optional-dependencies]
cpu = ["onnxruntime>=1.17.0"]
cuda = ["onnxruntime-gpu>=1.17.0"]
dataset = ["roboflow>=1.1.0"]
# tensorrt: instalar via sistema (JetPack/apt) - no soporta Python 3.14

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai", "onnx_optimizer", "tensorrt_optimizer"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
